--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "99e3dd55",
+   "id": "a7fa7759",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "22727332",
+   "id": "be32b9dd",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3077e45c",
+   "id": "3989f884",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95edd73c",
+   "id": "bf135b01",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e9550d7",
+   "id": "b77c3b85",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b10a2cca",
+   "id": "24860912",
    "metadata": {},
    "source": [
     "# Our Jupyter server\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f509f492",
+   "id": "726ce5e6",
    "metadata": {},
    "source": [
     "# Printing text and numbers"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "768ca012",
+   "id": "e0da8542",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "29ab4aa1",
+   "id": "ca33af16",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "43fedca1",
+   "id": "0f71cd62",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c14f4007",
+   "id": "7dae8f77",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "81065875",
+   "id": "09789bef",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "49b65af5",
+   "id": "0267d16f",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c1bfbfc1",
+   "id": "118e6f8c",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a442590c",
+   "id": "99efb032",
    "metadata": {},
    "source": [
     "# Variables and assignment\n",
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c4ee5342",
+   "id": "db82a55f",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d2507e4",
+   "id": "2465bc3f",
    "metadata": {},
    "source": [
     "# Quotes or no quotes?\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "97dfdd2b",
+   "id": "24c4751f",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c7f86875",
+   "id": "18d93d46",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "879aa89a",
+   "id": "34d53511",
    "metadata": {},
    "source": [
     "# Variable names\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1ff34e7c",
+   "id": "e97309a3",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "70433ef3",
+   "id": "b596c541",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "041c15de",
+   "id": "03b516f8",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "22814965",
+   "id": "fdce0918",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfd86517",
+   "id": "18a63624",
    "metadata": {},
    "source": [
     "# To use Markdown mode\n",
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ee44f5e7",
+   "id": "2a893137",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25c7571c",
+   "id": "ce131e20",
    "metadata": {},
    "source": [
     "# Exercise: Greet yourself\n",
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b1b570dd",
+   "id": "1ce13133",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "340840cc",
+   "id": "438bce34",
    "metadata": {},
    "source": [
     "# Getting input from the user\n",
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f787c24d",
+   "id": "47424bea",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "8d484ff7",
+   "id": "70d696be",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "7568ce96",
+   "id": "b3f2afea",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "13b82565",
+   "id": "dfa43676",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "936ba6fe",
+   "id": "1619ef8a",
    "metadata": {},
    "source": [
     "# Exercise: Multi-part greeting\n",
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d2d32125",
+   "id": "44abd7d3",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc90371c",
+   "id": "c8809e87",
    "metadata": {},
    "source": [
     "# f-strings\n",
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "98e0e128",
+   "id": "804aaa4a",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a318c82e",
+   "id": "aa8189e5",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a163885",
+   "id": "c4e3c0f4",
    "metadata": {},
    "source": [
     "# Comparing values\n",
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "de00ff59",
+   "id": "344c6e04",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "43d23fc3",
+   "id": "69059df7",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "b14d100c",
+   "id": "f21cb802",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "279cdfbf",
+   "id": "a2384504",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "55a7c15d",
+   "id": "9658c4a1",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "aa57f5ea",
+   "id": "1f9e14a1",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "94c61f74",
+   "id": "583fbfb3",
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "691b5aa8",
+   "id": "944ba419",
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "787cea07",
+   "id": "6f11ee8e",
    "metadata": {},
    "source": [
     "# Comparison operators\n",
@@ -994,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "efdcc083",
+   "id": "9e9f5dee",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "5adc11db",
+   "id": "25c2e5a9",
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "064b2983",
+   "id": "c76d2ce7",
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "c2e9173b",
+   "id": "648433f1",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "9505e784",
+   "id": "ae352254",
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaddbdc7",
+   "id": "ee86433d",
    "metadata": {},
    "source": [
     "# Conditional execution\n",
@@ -1128,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "bad091e2",
+   "id": "cc0268a4",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b948327d",
+   "id": "9e927905",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b7cbc14",
+   "id": "79d03b59",
    "metadata": {},
    "source": [
     "# Exercise: Which word comes first?\n",
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "9e00cbd0",
+   "id": "31fd8203",
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34788b44",
+   "id": "52e2551c",
    "metadata": {},
    "source": [
     "# More sophisticated comparisons\n",
@@ -1224,8 +1224,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "id": "5a714462",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: someone else\n",
+      "That is a very strange name...\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('Enter your name: ')\n",
+    "\n",
+    "if name == 'Reuven':\n",
+    "    print('Hello, boss!')\n",
+    "    print('It is so great to see you again!')\n",
+    "elif name == 'someone else':\n",
+    "    print('That is a very strange name...')\n",
+    "else:\n",
+    "    print(f'Hello, {name}. Who are you?')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "67314a7a",
+   "id": "c9f3c657",
    "metadata": {},
    "outputs": [],
    "source": []
