--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "954f9513",
+   "id": "2cf0e868",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5ad70a21",
+   "id": "d60cd310",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1a754703",
+   "id": "ab2d33ca",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b6bdbeb5",
+   "id": "68eef7d4",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "56f255d0",
+   "id": "a2c163af",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f755a1da",
+   "id": "d9f4441a",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "97d2934f",
+   "id": "6bb1227a",
    "metadata": {},
    "outputs": [
     {
@@ -146,17 +146,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "e2032ea5",
+   "execution_count": null,
+   "id": "6f735f6a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the first word: chicken\n",
-      "Enter the second word: egg\n",
-      "chicken comes before egg.\n"
+      "Enter the first word: egg\n"
      ]
     }
    ],
@@ -166,6 +164,8 @@
     "\n",
     "if word1 < word2:\n",
     "    print(f\"{word1} comes before {word2}.\")\n",
+    "elif word1 == \"egg\":\n",
+    "    print(\"wow\")\n",
     "else:\n",
     "    print(f\"{word2} comes before {word1}.\")"
    ]
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3da33bdd",
+   "id": "95ca1dd2",
    "metadata": {},
    "outputs": [],
    "source": []
