--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d2808b15",
+   "id": "225e62e5",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "42f66e5c",
+   "id": "acf699e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6be7a189",
+   "id": "c2117419",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "79e4eed5",
+   "id": "c9259c23",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5a6450d9",
+   "id": "e6087214",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7a0720d",
+   "id": "3b0af324",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6277d94b",
+   "id": "1b732eea",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "94a5dd52",
+   "id": "bf707100",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c18e1976",
+   "id": "b17df076",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3d2077b2",
+   "id": "1ccb87d2",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0110946c",
+   "id": "7ea05f3a",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "12e3b02c",
+   "id": "303a04ba",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a1303950",
+   "id": "82be1b58",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f8dd9ec0",
+   "id": "3c7fae33",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "80969edf",
+   "id": "9db641b1",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "1e2c5e1f",
+   "id": "06e1a420",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "8aaea462",
+   "id": "8be0b83b",
    "metadata": {},
    "outputs": [
     {
@@ -336,10 +336,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaaee172",
+   "id": "e5980f9b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "word1 = input('Enter a word: ')\n",
+    "word2 = input('Enter another word: ')\n",
+    "if word1<word2:\n",
+    "    print(f'{word1} comes first')\n",
+    "else:\n",
+    "    print(f'{word2} comes first')"
+   ]
   }
  ],
  "metadata": {
