--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "d86d9e09",
    "metadata": {},
    "outputs": [
@@ -95,10 +95,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter Word #1: hubba\n",
-      "Enter Word #2: bubba\n",
-      "bubba is first word alphabetically\n",
-      "hubba is not hte first word alphabetically\n"
+      "Enter Word #1: test\n",
+      "Enter Word #2: test\n",
+      "test is first word alphabetically\n",
+      "test is not the first word alphabetically\n"
      ]
     }
    ],
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ff78ec6",
+   "id": "201f61af",
    "metadata": {},
    "outputs": [],
    "source": []
