--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e88141e",
+   "id": "f1c1ffa7",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bab1463d",
+   "id": "704cc6d5",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a2a72a9f",
+   "id": "3006a484",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1767a4b7",
+   "id": "68312bfd",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "dce04263",
+   "id": "7ee40eab",
    "metadata": {},
    "outputs": [
     {
@@ -159,8 +159,10 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "773cf652",
-   "metadata": {},
+   "id": "a320b530",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -175,16 +177,16 @@
    "source": [
     "word1=input('please enter random word: ')\n",
     "word2=input('please enter another word ')\n",
-    "if word1 <= word2:\n",
-    "    print(f'Here is your entries order {word2} and {word1}')\n",
+    "if word1 < word2:\n",
+    "    print(f'Here is your entries order {word2} then {word1}')\n",
     "else:\n",
-    "    print(' Here is your entries order ' + word1 + word2 )"
+    "    print(f'Here is your entries order {word1} the word2 )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad06b26a",
+   "id": "003c4bdf",
    "metadata": {},
    "outputs": [],
    "source": []
