--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2cf0e868",
+   "id": "52cb8b0d",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d60cd310",
+   "id": "66bc1af7",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ab2d33ca",
+   "id": "2e55066c",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "68eef7d4",
+   "id": "c951df45",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a2c163af",
+   "id": "937cebc6",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d9f4441a",
+   "id": "1077e4d8",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6bb1227a",
+   "id": "ba4279fb",
    "metadata": {},
    "outputs": [
     {
@@ -146,15 +146,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6f735f6a",
+   "execution_count": 20,
+   "id": "56f19b0e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the first word: egg\n"
+      "Enter the first word: chicken\n",
+      "Enter the second word: chicken\n",
+      "Please enter different words\n"
      ]
     }
    ],
@@ -162,10 +164,10 @@
     "word1 = input(\"Enter the first word: \")\n",
     "word2 = input(\"Enter the second word: \")\n",
     "\n",
-    "if word1 < word2:\n",
+    "if word1==word2:\n",
+    "    print(\"Please enter different words\")\n",
+    "elif word1 < word2:\n",
     "    print(f\"{word1} comes before {word2}.\")\n",
-    "elif word1 == \"egg\":\n",
-    "    print(\"wow\")\n",
     "else:\n",
     "    print(f\"{word2} comes before {word1}.\")"
    ]
@@ -173,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95ca1dd2",
+   "id": "d4db1d3c",
    "metadata": {},
    "outputs": [],
    "source": []
