--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "38ad9b47",
+   "id": "c6b1db50",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b290012d",
+   "id": "c13b1bc7",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a537908",
+   "id": "707eab53",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b2dd635",
+   "id": "8aa706e6",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1017883f",
+   "id": "a26ce2ee",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4b971480",
+   "id": "a235dd9a",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2a85491d",
+   "id": "83cb49b1",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "503b62d0",
+   "id": "7a40cff6",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dcdd4b21",
+   "id": "8973e2bc",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5ec6029c",
+   "id": "52c64bce",
    "metadata": {
     "scrolled": false
    },
@@ -170,14 +170,16 @@
     "word2 = input('Enter second word')\n",
     "if word1 > word2:\n",
     "    print(f'Word {word2} comes before {word1}')\n",
+    "elif word1 < word2:\n",
+    "    print(f'Word {word1} comes before {word2}')\n",
     "else:\n",
-    "    print(f'Word {word1} comes before {word2}')"
+    "    print(\"\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84f06255",
+   "id": "0ae0fc70",
    "metadata": {},
    "outputs": [],
    "source": []
