--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "225e62e5",
+   "id": "7afb12bb",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "acf699e3",
+   "id": "91ded672",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c2117419",
+   "id": "d2cf2f20",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c9259c23",
+   "id": "368f861e",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e6087214",
+   "id": "8ee34bc7",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b0af324",
+   "id": "a067244a",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1b732eea",
+   "id": "26d4271e",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bf707100",
+   "id": "d2307b7a",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b17df076",
+   "id": "3e763063",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1ccb87d2",
+   "id": "46b03af4",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7ea05f3a",
+   "id": "ba8695d5",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "303a04ba",
+   "id": "cc53f161",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "82be1b58",
+   "id": "12e0d349",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3c7fae33",
+   "id": "4ab0ad3a",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9db641b1",
+   "id": "74ee8b90",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "06e1a420",
+   "id": "6af9daf8",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "8be0b83b",
+   "id": "2a2b66f2",
    "metadata": {},
    "outputs": [
     {
@@ -335,18 +335,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e5980f9b",
+   "execution_count": 27,
+   "id": "ad86bf3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expected ':' (658077376.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[27], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    elif word1==word2\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
+     ]
+    }
+   ],
    "source": [
     "word1 = input('Enter a word: ')\n",
     "word2 = input('Enter another word: ')\n",
     "if word1<word2:\n",
     "    print(f'{word1} comes first')\n",
+    "elif word1==word2    \n",
     "else:\n",
     "    print(f'{word2} comes first')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b75e222",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a word: kot\n"
+     ]
+    }
+   ],
+   "source": [
+    "word1 = input('Enter a word: ')\n",
+    "word2 = input('Enter another word: ')\n",
+    "if word1<word2:\n",
+    "    print(f'{word1} comes first')\n",
+    "elif word1==word2: \n",
+    "    print('these are the same')\n",
+    "else:\n",
+    "    print(f'{word2} comes first')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd0f8424",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
