--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -285,7 +285,15 @@
    "id": "ab08598c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "word_1 = input('Enter the word_1: ')\n",
+    "word_2 = input('Enter the word_2: ')\n",
+    "if word_1 < word_2:\n",
+    "    print(f'{word_1} comes before {word_2}')\n",
+    "elif\n",
+    "else:\n",
+    "    print(f'{word_2} comes before {word_1}')"
+   ]
   }
  ],
  "metadata": {
