--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e4be8f1f",
+   "id": "7cfaaaec",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "37853edd",
+   "id": "731319f9",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f17b993d",
+   "id": "fdb9e218",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "9a244675",
+   "id": "e747a354",
    "metadata": {},
    "outputs": [
     {
@@ -85,10 +85,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78f4eeb1",
+   "id": "9494e0f1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name1= input ('Enter a 1st name: ')\n",
+    "name2= input ('Enter a 2nd name: ')\n",
+    "if name1 > name2:\n",
+    "    print(f'{name2} comes first')\n",
+    "elif name1 = name2:\n",
+    "    print (Duplicate words, check)\n",
+    "else: \n",
+    "    print (f'{name1} comes first')"
+   ]
   }
  ],
  "metadata": {
