--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "d86d9e09",
    "metadata": {},
    "outputs": [
@@ -97,17 +97,18 @@
      "text": [
       "Enter Word #1: test\n",
       "Enter Word #2: test\n",
-      "test is first word alphabetically\n",
-      "test is not the first word alphabetically\n"
+      "You entered same word, please try again!\n"
      ]
     }
    ],
    "source": [
     "word1 = input ('Enter Word #1: ')\n",
-    "word2 = input ('Enter Word #2: ')\n",
+    "word2 = input ('Enter Word #2 (do not use same word : ')\n",
     "if word1 < word2:\n",
     "    print (f'{word1} is first word alphabetically')\n",
     "    print (f'{word2} is not the first word alphabetically')\n",
+    "elif word1 == word2:\n",
+    "    print (f'You entered same word, please try again!')\n",
     "else: \n",
     "    print (f'{word2} is first word alphabetically')\n",
     "    print (f'{word1} is not the first word alphabetically')"
@@ -124,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "201f61af",
+   "id": "cdb83b64",
    "metadata": {},
    "outputs": [],
    "source": []
