--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "98d7b5ac",
+   "id": "36fe4598",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5bb14412",
+   "id": "951ca17e",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0518c829",
+   "id": "369bc58b",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "361a9acf",
+   "id": "888d61a5",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1f3824d9",
+   "id": "ea20ac6c",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6d66f4d7",
+   "id": "fc49dc1a",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fdd769db",
+   "id": "bd9288bd",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5aa569f3",
+   "id": "e1ce64ec",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "465e61ca",
+   "id": "0b5b4354",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "05e77812",
+   "id": "c1a9fb2c",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02ea757c",
+   "id": "7a54a0b6",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "be60672c",
+   "id": "8628395b",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3f62033b",
+   "id": "ee69130d",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6b8642b8",
+   "id": "2b0cf376",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e851efd3",
+   "id": "c667b646",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5b8d41a7",
+   "id": "951eb866",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "79d104b1",
+   "id": "ec1f84e4",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "eb2e2109",
+   "id": "029018eb",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "78301946",
+   "id": "8a9ea04a",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "8997da56",
+   "id": "70831ea8",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "32e7ce9d",
+   "id": "4f990b5e",
    "metadata": {},
    "outputs": [
     {
@@ -421,15 +421,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4358c1f",
+   "id": "1f5b973f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "word1 = input('Enter first word: ')\n",
+    "word2 = input('Enter second word: ')\n",
+    "if word1 > word2 :\n",
+    "    print(word1, 'comes before', word2) # print(f'{word1} comes before{word2}')\n",
+    "elif wo\n",
+    "else:\n",
+    "    print(f'{word2} comes before {word1}')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "889ddbf9",
+   "id": "9119758a",
    "metadata": {},
    "outputs": [],
    "source": []
