--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1c1ffa7",
+   "id": "a839e141",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "704cc6d5",
+   "id": "874cb7ef",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3006a484",
+   "id": "2269c610",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "68312bfd",
+   "id": "64c9ce8c",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "7ee40eab",
+   "id": "ddce523c",
    "metadata": {},
    "outputs": [
     {
@@ -158,35 +158,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "a320b530",
+   "execution_count": null,
+   "id": "39ef31f2",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "please enter random word: a\n",
-      "please enter another word b\n",
-      "Here is your entries order b and a\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "word1=input('please enter random word: ')\n",
     "word2=input('please enter another word ')\n",
     "if word1 < word2:\n",
     "    print(f'Here is your entries order {word2} then {word1}')\n",
+    "elif word1 == word2:\n",
+    "    print('Error! same value entred')\n",
+    "     \n",
     "else:\n",
-    "    print(f'Here is your entries order {word1} the word2 )"
+    "    print(f'Here is your entries order {word1} then {word2}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "003c4bdf",
+   "id": "1eb1195a",
    "metadata": {},
    "outputs": [],
    "source": []
