--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c6b1db50",
+   "id": "862bd1d2",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c13b1bc7",
+   "id": "1613f602",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "707eab53",
+   "id": "5a41f137",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8aa706e6",
+   "id": "e4cfcea9",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a26ce2ee",
+   "id": "b93e51c0",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a235dd9a",
+   "id": "f99da85e",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "83cb49b1",
+   "id": "25d1d2fd",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7a40cff6",
+   "id": "61a84c9e",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8973e2bc",
+   "id": "facaf6a7",
    "metadata": {},
    "outputs": [
     {
@@ -149,8 +149,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "52c64bce",
+   "execution_count": 23,
+   "id": "06a6c376",
    "metadata": {
     "scrolled": false
    },
@@ -160,8 +160,8 @@
      "output_type": "stream",
      "text": [
       "Enter first worda\n",
-      "Enter second wordf\n",
-      "Word a comes before f\n"
+      "Enter second word\n",
+      "Word  comes before a\n"
      ]
     }
    ],
@@ -173,13 +173,13 @@
     "elif word1 < word2:\n",
     "    print(f'Word {word1} comes before {word2}')\n",
     "else:\n",
-    "    print(\"\")\n"
+    "    print('Identical words')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ae0fc70",
+   "id": "53be6ea6",
    "metadata": {},
    "outputs": [],
    "source": []
