--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -286,13 +286,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "word_1 = input('Enter the word_1: ')\n",
-    "word_2 = input('Enter the word_2: ')\n",
-    "if word_1 < word_2:\n",
-    "    print(f'{word_1} comes before {word_2}')\n",
-    "elif\n",
+    "name = input('Enter your name: ')\n",
+    "\n",
+    "if name == 'Reuven':\n",
+    "    print('Hello, boss!')\n",
+    "    print('It is so great to see you again!')\n",
+    "elif name == 'someone else':\n",
+    "    print('That is a very strange name...')\n",
     "else:\n",
-    "    print(f'{word_2} comes before {word_1}')"
+    "    print(f'Hello, {name}. Who are you?')"
    ]
   }
  ],
