--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7afb12bb",
+   "id": "95c1a3e9",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "91ded672",
+   "id": "fc6261c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d2cf2f20",
+   "id": "4502bf7f",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "368f861e",
+   "id": "a0426a65",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8ee34bc7",
+   "id": "738d8855",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a067244a",
+   "id": "4b63482b",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "26d4271e",
+   "id": "3949e490",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d2307b7a",
+   "id": "feaaa182",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3e763063",
+   "id": "e6c78e34",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "46b03af4",
+   "id": "3d909d7f",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ba8695d5",
+   "id": "f8993c27",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cc53f161",
+   "id": "ca8fcf94",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "12e0d349",
+   "id": "46b5b5ec",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4ab0ad3a",
+   "id": "2a27161b",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "74ee8b90",
+   "id": "7d8dee8c",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "6af9daf8",
+   "id": "87d0336c",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "2a2b66f2",
+   "id": "ba87531b",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "ad86bf3d",
+   "id": "40b1f6f2",
    "metadata": {},
    "outputs": [
     {
@@ -360,15 +360,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7b75e222",
+   "execution_count": 30,
+   "id": "e3c612dc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a word: kot\n"
+      "Enter a word: kot\n",
+      "Enter another word: kot\n",
+      "these are the same\n"
      ]
     }
    ],
@@ -378,7 +380,7 @@
     "if word1<word2:\n",
     "    print(f'{word1} comes first')\n",
     "elif word1==word2: \n",
-    "    print('these are the same')\n",
+    "    print('These are the same. Would you like to compare diffrent words?')\n",
     "else:\n",
     "    print(f'{word2} comes first')"
    ]
@@ -386,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd0f8424",
+   "id": "e2cf3219",
    "metadata": {},
    "outputs": [],
    "source": []
