--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7cfaaaec",
+   "id": "89bcdd6b",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "731319f9",
+   "id": "7e3489f4",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fdb9e218",
+   "id": "8ad31ae4",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "e747a354",
+   "id": "dca6a51e",
    "metadata": {},
    "outputs": [
     {
@@ -84,20 +84,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9494e0f1",
+   "execution_count": 28,
+   "id": "7e75ac9d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a 1st name: chicken\n",
+      "Enter a 2nd name: chicken\n",
+      "duplicate words, check again\n"
+     ]
+    }
+   ],
    "source": [
     "name1= input ('Enter a 1st name: ')\n",
     "name2= input ('Enter a 2nd name: ')\n",
     "if name1 > name2:\n",
     "    print(f'{name2} comes first')\n",
-    "elif name1 = name2:\n",
-    "    print (Duplicate words, check)\n",
+    "elif name1 == name2:\n",
+    "    print ('duplicate words, check again')\n",
     "else: \n",
     "    print (f'{name1} comes first')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9a0ee0e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
