--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "d86d9e09",
    "metadata": {},
    "outputs": [
@@ -96,20 +96,21 @@
      "output_type": "stream",
      "text": [
       "Enter Word #1: test\n",
-      "Enter Word #2: test\n",
-      "You entered same word, please try again!\n"
+      "Enter Word #2 (do not use same word): test1\n",
+      "test is first word alphabetically\n",
+      "test1 is not the first word alphabetically\n"
      ]
     }
    ],
    "source": [
     "word1 = input ('Enter Word #1: ')\n",
-    "word2 = input ('Enter Word #2 (do not use same word : ')\n",
-    "if word1 < word2:\n",
+    "word2 = input ('Enter Word #2 (do not use same word): ')\n",
+    "if word1 < word2: #check if word1 comes first\n",
     "    print (f'{word1} is first word alphabetically')\n",
     "    print (f'{word2} is not the first word alphabetically')\n",
-    "elif word1 == word2:\n",
+    "elif word1 == word2: #check if words are equal\n",
     "    print (f'You entered same word, please try again!')\n",
-    "else: \n",
+    "else:  \n",
     "    print (f'{word2} is first word alphabetically')\n",
     "    print (f'{word1} is not the first word alphabetically')"
    ]
@@ -125,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdb83b64",
+   "id": "6229fd16",
    "metadata": {},
    "outputs": [],
    "source": []
