--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "36fe4598",
+   "id": "57641d05",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "951ca17e",
+   "id": "269144de",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "369bc58b",
+   "id": "8a5c786d",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "888d61a5",
+   "id": "afbacd25",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ea20ac6c",
+   "id": "d5560a5b",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fc49dc1a",
+   "id": "638bc565",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bd9288bd",
+   "id": "abf788b6",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e1ce64ec",
+   "id": "f2eb76d3",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0b5b4354",
+   "id": "c615731f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c1a9fb2c",
+   "id": "e7909a35",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a54a0b6",
+   "id": "e3f7c36f",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8628395b",
+   "id": "b7f2abf0",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ee69130d",
+   "id": "b6cb1201",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2b0cf376",
+   "id": "b7de1d53",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c667b646",
+   "id": "48769955",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "951eb866",
+   "id": "a3dad6ce",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ec1f84e4",
+   "id": "069d46e6",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "029018eb",
+   "id": "031fe275",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "8a9ea04a",
+   "id": "1f21ec6c",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "70831ea8",
+   "id": "d7855732",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "4f990b5e",
+   "id": "7a9608e8",
    "metadata": {},
    "outputs": [
     {
@@ -420,16 +420,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1f5b973f",
+   "execution_count": 42,
+   "id": "0c971065",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first word: egg\n",
+      "Enter second word: egg\n",
+      "egg is same as egg\n"
+     ]
+    }
+   ],
    "source": [
     "word1 = input('Enter first word: ')\n",
     "word2 = input('Enter second word: ')\n",
     "if word1 > word2 :\n",
     "    print(word1, 'comes before', word2) # print(f'{word1} comes before{word2}')\n",
-    "elif wo\n",
+    "elif word1 == word2 :\n",
+    "    print(f'{word1} is same as {word2}')\n",
     "else:\n",
     "    print(f'{word2} comes before {word1}')"
    ]
@@ -437,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9119758a",
+   "id": "1af7227b",
    "metadata": {},
    "outputs": [],
    "source": []
