--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a839e141",
+   "id": "72803939",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "874cb7ef",
+   "id": "161c87f1",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2269c610",
+   "id": "9c2da848",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "64c9ce8c",
+   "id": "2a8b66dc",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ddce523c",
+   "id": "12525c4a",
    "metadata": {},
    "outputs": [
     {
@@ -158,12 +158,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "39ef31f2",
+   "execution_count": 34,
+   "id": "158fffab",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please enter random word: berry\n",
+      "please enter another word berry\n",
+      "Error! same value entred\n"
+     ]
+    }
+   ],
    "source": [
     "word1=input('please enter random word: ')\n",
     "word2=input('please enter another word ')\n",
@@ -171,6 +181,8 @@
     "    print(f'Here is your entries order {word2} then {word1}')\n",
     "elif word1 == word2:\n",
     "    print('Error! same value entred')\n",
+    "elif word1 == \"a\":\n",
+    "    print(0)\n",
     "     \n",
     "else:\n",
     "    print(f'Here is your entries order {word1} then {word2}')"
@@ -179,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1eb1195a",
+   "id": "607c4ef9",
    "metadata": {},
    "outputs": [],
    "source": []
